Added completion for variables and parameters Added completion for Operators in querySteps Simplified the procedure for handling LocalVariable creation and processing a bit