@@ -1,7 +1,8 @@
 package com.misset.opp.callable.builtin.commands;
 
 import com.misset.opp.callable.Call;
-import com.misset.opp.callable.local.LocalVariableTypeProvider;
+import com.misset.opp.callable.local.CallableLocalVariableTypeProvider;
+import com.misset.opp.callable.local.LocalVariable;
 import com.misset.opp.ttl.OppModel;
 import org.apache.jena.ontology.OntResource;
 
@@ -9,7 +10,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
-public class ForEachCommand extends BuiltInCommand implements LocalVariableTypeProvider {
+public class ForEachCommand extends BuiltInCommand implements CallableLocalVariableTypeProvider {
     private ForEachCommand() {
     }
 
@@ -30,19 +31,14 @@ public class ForEachCommand extends BuiltInCommand implements LocalVariableTypeP
         return Collections.emptySet();
     }
 
-    @Override
-    public boolean providesTypeFor(String name) {
-        return List.of("$value", "$index", "$array").contains(name);
-    }
-
-    @Override
-    public Set<OntResource> getType(String name,
-                                    Call call) {
-        if (List.of("$value", "$array").contains(name)) {
-            return call.resolveSignatureArgument(0);
-        } else if ("$index".equals(name)) {
-            return Set.of(OppModel.INSTANCE.XSD_INTEGER_INSTANCE);
+    public List<LocalVariable> getLocalVariables(Call call, int argumentIndex) {
+        if (argumentIndex != 1) {
+            return Collections.emptyList();
         }
-        return Collections.emptySet();
+        return List.of(
+                new LocalVariable("$value", "iterator value", call.resolveSignatureArgument(0)),
+                new LocalVariable("$index", "iterator index", Set.of(OppModel.INSTANCE.XSD_INTEGER_INSTANCE)),
+                new LocalVariable("$array", "all input values", call.resolveSignatureArgument(0))
+        );
     }
 }
