@@ -1,15 +1,15 @@
 package com.misset.opp.callable.builtin.commands;
 
 import com.misset.opp.callable.Call;
-import com.misset.opp.callable.local.LocalVariableTypeProvider;
-import com.misset.opp.ttl.OppModel;
+import com.misset.opp.callable.local.CallableLocalVariableTypeProvider;
+import com.misset.opp.callable.local.LocalVariable;
 import org.apache.jena.ontology.OntResource;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
-public class MapCommand extends BuiltInCommand implements LocalVariableTypeProvider {
+public class MapCommand extends BuiltInCommand implements CallableLocalVariableTypeProvider {
     private MapCommand() {
     }
 
@@ -32,18 +32,14 @@ public class MapCommand extends BuiltInCommand implements LocalVariableTypeProvi
     }
 
     @Override
-    public boolean providesTypeFor(String name) {
-        return List.of("$value", "$index", "$array").contains(name);
-    }
-
-    @Override
-    public Set<OntResource> getType(String name,
-                                    Call call) {
-        if (List.of("$value", "$array").contains(name)) {
-            return call.resolveSignatureArgument(0);
-        } else if ("$index".equals(name)) {
-            return Set.of(OppModel.INSTANCE.XSD_INTEGER_INSTANCE);
+    public List<LocalVariable> getLocalVariables(Call call, int argumentIndex) {
+        if (argumentIndex != 1) {
+            return Collections.emptyList();
         }
-        return Collections.emptySet();
+        return List.of(
+                new LocalVariable("$value", "iterator value", call.resolveSignatureArgument(0)),
+                new LocalVariable("$index", "iterator index", call.resolveSignatureArgument(0)),
+                new LocalVariable("$array", "all input values", call.resolveSignatureArgument(0))
+        );
     }
 }
